# digital_architect

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  __init__.py  config.py  main.py  requirements.txt
backend/agents/: __init__.py  _runtime.py  defaults.py  email_agent.py  evaluator_agent.py  merge_agent.py  orchestrator.py  prompt_snippets.py  registry.py
backend/agents/specialist/: __init__.py  be_agent.py  db_agent.py  (+2 more)
backend/core/: __init__.py  email_formatting.py  pipeline.py  retrieval_metrics.py  source_links.py  sse.py  stack_compliance.py  stack_hints.py
backend/db/: __init__.py  agent_settings_service.py  audit_service.py  document_service.py  migrations.py  models.py  session.py
backend/middleware/: __init__.py  auth.py  logging.py
backend/schemas/: __init__.py  admin.py  agents.py  audit.py  chat.py  documents.py  feedback.py
backend/tools/: __init__.py  email_tool.py  evaluator_tool.py  merge_tool.py  retrieval_tool.py  specialist_tool.py
backend/vector/: chroma_client.py  chroma_store.py  doc_identity.py  doc_versions.py  versioned_ingest.py
data/framework_docs/: manifest.json
frontend/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
frontend/store/: authStore.ts  chatStore.ts  pipelineStore.ts
scripts/: generate_framework_docs.py  ingest_docs.py  smoke_escalation.py  smoke_pipeline.py  watch_docs.py
scripts/topics/: phase2_new.json
(+127 files in other folders)
