[project]
name = "digital-architect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "bcrypt>=4.2.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "gradio>=6.14.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "ipykernel>=7.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "litellm>=1.86.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "openai-agents>=0.17.3",
    "plotly>=6.7.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.8.0",
    "sendgrid>=6.12.5",
    "sentence-transformers>=5.5.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "sse-starlette>=2.1.3",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.32.0",
]
